--- a/example.html
+++ b/example.html
@@ -4,7 +4,7 @@
     <link href="css/bootstrap.css" rel="stylesheet" type="text/css">
     <link href="css/styles.css" rel="stylesheet"  type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Alegreya" rel="stylesheet">
-    <script src="js/jquery.js"></script>
+    <script src="js/jquery-3.2.0.js"></script>
     <script src="js/scripts.js"></script>
 
     <title>It All Happened With One Swipe...</title>
