added more content

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
           <div class="radio">
             <label>
               <input type="radio" name="homelessReply" value="sorry">
-              <h4>Sorry man, I dont have any change on me. I don’t even have pockets. I just am taking a morning jog. I am sure if you ask the bus driver politely and tell them your situation they can help you.</h4>
+              <h4>Sorry man, I dont have any change on me. I dont even have pockets. I just am taking a morning jog. I am sure if you ask the bus driver politely and tell them your situation they can help you.</h4>
             </label>
           </div>
           <div class="radio">
@@ -135,7 +135,7 @@
       <br>
       <div class="container" id="checkphone">
         <h4>You get home check your fit bit and see that you ran just a little over 5k and decide to take a hot shower.
-        <h4>After a nice shower you decide to check out the new match on Tinder. Wow, there interests are kind of generic: Books, movies, philosophy, music: They also love to laugh, and are always on fleek. You swipe right and look at the familiar prompt saying: closed mouths don’t get fed.</h4>
+        <h4>After a nice shower you decide to check out the new match on Tinder. Wow, there interests are kind of generic: Books, movies, philosophy, music: They also love to laugh, and are always on fleek. You swipe right and look at the familiar prompt saying: closed mouths dont get fed.</h4>
         <h4>Now is the time to message.</h4>
       </div>
       <br>
@@ -156,7 +156,7 @@
         <div class="radio">
           <label>
             <input type="radio" name="first" value="what-movie">
-              <h4>I am such a movie buff what’s your favorite all time flick?</h4>
+              <h4>I am such a movie buff whats your favorite all time flick?</h4>
           </label>
         </div>
         <div class="radio">
@@ -169,32 +169,43 @@
           <button type="submit" class="btn btn-primary" id="text-one">Reply!</button>
       </form>
       <br>
+      <br>
+
       <!--This is where the results for the text message are-->
       <div class="container" id="first-message-results">
         <div class="jumbotron" id="fleek-message" >
           <div class="well" >
-          <h4>	OMG, is that like some lame attempt at passive aggressiveness? Or are you actually being serious? Like wow! I don’t think this is going to work. For further reference dont ever underestimate anyone because of some generic traits on there Tinder Profile. The END</h4>
+          <h3>	OMG, is that like some lame attempt at passive aggressiveness? Or are you actually being serious? Like wow! I don’t think this is going to work. For further reference dont ever underestimate anyone because of some generic traits on there Tinder Profile. The END</h3>
           </div>
         </div>
         <div class="jumbotron" id="philosophy-message">
           <div class="well">
-          <h4>	Actually, I think its an over bloated essay based on minutae that does no good for anyone besides pampering Zizeks already huge ego! Sorry, I dont think this is going to work. Boom! The END!</h4>
+          <h3>	Actually, I think its an over bloated essay based on minutae that does no good for anyone besides pampering Zizeks already huge ego! Sorry, I dont think this is going to work. Boom! The END!</h3>
           </div>
         </div>
         <div class="jumbotron" id="movie-message">
           <div class="well">
-          <h4>Omg, I love movies so much. But, this is an easy one for me. I totally love the first Back to the Future, it’s my all-time favorite.  A string of emoticons follow the statement.	</h4>
+          <h3>Omg, I love movies so much. But, this is an easy one for me. I totally love the first Back to the Future, its my all-time favorite.  A string of emoticons follow the statement.	</h3>
           </div>
         </div>
         <div class="jumbotron" id="music-message">
           <div class="well">
-          <h4>	Omg, Radio Head is my favorite band. I love their new album-A Moon Shaped Pool, but I have not read the article. If I would have to guess from just my own expertise on sad songs, I would have to say its True Love Waits?</h4>
+          <h3>	Omg, Radio Head is my favorite band. I love their new album-A Moon Shaped Pool, but I have not read the article. If I would have to guess from just my own expertise on sad songs, I would have to say its True Love Waits?</h3>
           </div>
         </div>
       </div>
       <br>
-      <div class="container" id="Interested">
+      <div class="container" id="movie-repy">
         <h4>Your interest is definitely picked now since they just told you that there all time favorite movie is -Back to the Future- which coincidentally is yours too! You also remember hearing from your friend that Back to the Future is playing all week for only four dollars at all Mcmenamin Theaters. No Way! What luck!</h4>
+        <h4>You reply, hey guess what, the stars are looking out for us. There just so happens to be a back to the future marathon at the Bagdad Theater tonight! Would you like to go?</h4><br>
+        <h4>It takes just five minutes for your match to respond...</h4>
+        <h4>You just earned major points in my book! I would love to attend a Back to the future marathon! This is going to be so awesome. You better pick me up in a Delorean! J/k Oh by the way,  would you like to get drinks first before we attend?</h4>
+      </div>
+      <div class="container" id="music-reply">
+        <h4>You reply ecstatically: What a great guess! You are exactly right looks like data science and your intuition correlate exactly. And yes, I love there new album too. Did you know that album is inspired by Thoms breakup of his 23 year marriage to his wife. No wonder it resonates with such melancholy. </h4>
+        <br>
+        <h4>About five minutes later they respond back...</h4>
+        <h4>They reply back, I knew it! The first time I heard that song I was like in tears. Thom has a way of getting to your heart and ripping it out, cutting it up in disparate pieces and then putting it back together again. I love him! I love Radiohead! So, guess what I actually secured 2 tickets to their show and It just so happens my best friend who was going with me cant go. The concert is happening at the Crystal Ballroom tonight. Would you like to go! </h4>
       </div>
 
 
